--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -10,7 +10,7 @@
 <body>
 <div class="container text-center">
     <h1>Create New Stock</h1>
-    <form action="#" th:action="@{/admin}" method="post" th:object="${stock}">
+    <form action="#" th:action="@{/addStock}" method="post" th:object="${stock}">
         <label>Company name:</label>
         <input type="text" name="co_name"/><br/>
 
