--- a/src/main/resources/templates/signup_form.html
+++ b/src/main/resources/templates/signup_form.html
@@ -12,7 +12,7 @@
     <div>
         <h1>User Registration - Sign Up</h1>
     </div>
-    <form th:action="@{/process_register}" th:object="${user}"
+    <form th:action="@{/registerUser}" th:object="${user}"
           method="post" style="max-width: 600px; margin: 0 auto;">
         <div class="m-3">
             <div class="form-group row">
